

  ChangeLog.txt for libSUFR
  
     
   29: 06/02/2011:
     - Moved code from TheSky, use with rev. 209 of TheSky:
       - added angles.f90: rev*, rv*, asep, calpa, pastr_*, wdstr_*
       - added system.f90: quit_program
       - date_and_time.f90: added jd2cal, dtm2jd, tm2hm, tm2hms, doy, ymd2doy, doy2md, leapyr
     - It seems that a function in a module cannot be called by other functions in the same
       module - in order to do so, and make all public, create a submodule that is called 
       by the main module *and* the function(!)
     - Updated Doxyfile, shortened Doxygen file descriptions
          
   27: 01/01/2011:
     - Added doc/CHANGELOG (for releases), version.txt (release version) to svn
     
   26: 01/01/2011:
     - Updated doc/README, added doc/INSTALL
     
   25: 01/01/2011:
     - Bugfix: definition of pi in constants.f90, introduced in rev.23
     - Few minor updates in constants.f90, CMake
     
   24: 01/01/2011:
     - Fix in CMake: using MATCHES iso STREQUAL allows partial match of compiler name
     
   23: AstroFloyd, 31/12/2010
     - Updated constants.f90:
       - renamed set_constants*() to set_SUFR_constants*()
       - added a single-precision version of all mathematical constants
     - Tweaked CMake files a bit
     
   21,22: AstroFloyd, 31/12/2010
     - Added g95 to CMake
     - Fixed a few g95 warnings
     
   20: AstroFloyd, 30/12/2010
     - Default CMake files without run-time checks
     
   19: AstroFloyd, 30/12/2010
     - Added doc/README and doc/LICENCE files to svn
     - Extended copyright to 2011, added SF url to source
   
   18: AstroFloyd, 29/12/2010
     - Updated date/time constants
     
   17: AstroFloyd, 29/12/2010
     - Updated CMake files
   
   16: AstroFloyd, 26/12/2010
      - Compile with gfortran using F2008 standard
   
   15: AstroFloyd, 18/12/2010 = SF rev.001
      - Changed Doxygen output dir
   
   14: AstroFloyd, 18/12/2010
      - added make script to svn
   